<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.personalization.PersonalizationFragment">

<TextView
    android:id="@+id/title_producto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?attr/textAppearanceHeadline5"
    android:text="@string/title_personalization"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_panel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_panel_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_panel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/txt_panel_button2"/>
    <ImageView
        android:id="@+id/img_desingEnd"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@mipmap/sweater_white_animado_3"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/img_desingEnd"/>
    <TextView
        android:id="@+id/lbl_msg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/lbl_msg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_msg4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_msg3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Compar"
        app:icon="@drawable/ic_shopping"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/lbl_msg4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>