<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_desing"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_desingEnd"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/sweater_white_animado_3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_title_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/img_desingEnd"/>
    <TextView
        android:id="@+id/txt_panel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_answer"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_btn_avatar"
        app:icon="@drawable/ic_reaction"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:iconSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/txt_panel_button"
        app:layout_constraintEnd_toStartOf="@id/btn_buy"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comprar"
        app:icon="@drawable/ic_shopping"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/btn_avatar"
        app:layout_constraintTop_toBottomOf="@id/txt_panel_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>