<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txt_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_buy"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txt_panel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lbl_msg5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_title_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/txt_panel_button"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_nombre"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Select an item"
        android:layout_margin="16dp"
        style="@style/MyInputStyle"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/input1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/input3">
        <Spinner
            android:id="@+id/id_type_spinner"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_spinner_background"
            android:entries="@array/id_types"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="225dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_numero"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input1"
        app:layout_constraintStart_toEndOf="@id/input2"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumeroId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        android:layout_margin="16dp"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_address"
        android:layout_margin="16dp"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_city"
        android:layout_margin="16dp"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCity"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/input6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Pagar"
        app:icon="@drawable/ic_shopping"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>