<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.avatar.AvatarFragment">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/title_avatar"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_msg1"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textAlignment="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/txt_text1"/>
    <TextView
        android:id="@+id/txt_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_msg2"
        android:textAlignment="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/btn_girl"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/icono_girl"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/txt_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btn_men"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/icono_man"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/btn_girl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>