<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_como_pagar"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_mercado"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/logo_mercadopago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_1"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/img_mercado"/>
    <RadioGroup
        android:id="@+id/groupRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <RadioButton
            android:id="@+id/rb_credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tarjeta de crédito" />

        <RadioButton
            android:id="@+id/rb_debito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tarjeta de débito" />
    </RadioGroup>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/groupRadio"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_numero_tarjeta"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumeroTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789 "
            android:maxLength="19"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_nombre_apellido"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombrePagador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_fecha"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input4">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFechaExpiracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_codigo"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input2"
        app:layout_constraintStart_toEndOf="@id/input3"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789 "
            android:maxLength="3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Select an item"
        android:layout_margin="16dp"
        style="@style/MyInputStyle"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/input3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/input6">

        <Spinner
            android:id="@+id/id_type_spinner"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:entries="@array/id_types"
            android:background="@drawable/my_spinner_background"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_numero"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/input4"
        app:layout_constraintStart_toEndOf="@id/input5"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumeroId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/input6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Pagar"
        app:icon="@drawable/ic_shopping"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>