<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.buy.BuyFragment">

        <TextView
            android:id="@+id/lbl_title_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_titlle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/lbl_title_profile"/>
        <ImageView
            android:id="@+id/img_desingEnd"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/sweater_black_animado_3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/img_desingEnd"/>

        <TextView
            android:id="@+id/lbl_talla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_talla"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/groupRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_talla">

            <RadioButton
                android:id="@+id/rb_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S" />

            <RadioButton
                android:id="@+id/rb_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M" />

            <RadioButton
                android:id="@+id/rb_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_cantidad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintTop_toBottomOf="@id/groupRadio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/input"/>
        <TextView
            android:id="@+id/lbl_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_total"
            app:layout_constraintTop_toBottomOf="@id/line3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lbl_price"/>
        <TextView
            android:id="@+id/lbl_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/line3"
            app:layout_constraintStart_toEndOf="@id/lbl_total"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Compar"
            app:icon="@drawable/ic_shopping"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:iconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/lbl_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
